feat: improve player tracking and HUD behavior